force-app/main/default/objects/Corpus__c/Corpus__c.object-meta.xml
<CustomObject>
    <label>Corpus</label>
    <nameField>
        <label>Corpus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corpuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>