force-app/main/default/objects/Corpus__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>