force-app/main/default/objects/Corpus__c/fields/Number_of_installed_fans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_installed_fans__c</fullName>
    <label>Number of installed fans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>